tests/fail/fail_duplicate_function.kl
fn soma(nter a, nter b) nter {
    divolvi a + b;
}

fn soma(nter a, nter b) nter {
    divolvi a - b;
}

fn inisiu() vaziu {
    mostran(soma(1, 2));
}
